--- a/pagedata/feedbackdata/feedbackp11.htm
+++ b/pagedata/feedbackdata/feedbackp11.htm
@@ -1,2 +1,2 @@
-<p><span class="greenspan">Good job</span>, you have completed Step 9.</p>
+<p><span class="greenspan">Good job</span>. The subject line is in all caps, which is sometimes a clue that the message is spam.</p>
 <p><i>Click <b>Next</b> to proceed.</i></p>
