--- a/pagedata/feedbackdata/feedbackp12.htm
+++ b/pagedata/feedbackdata/feedbackp12.htm
@@ -1,2 +1,2 @@
-<p><span class="greenspan">Good job</span>, you have completed Step 10.</p>
+<p><span class="greenspan">Good job</span>. The subject line is in all caps with multiple exclamation points. A sense of urgency is often a sign of a malicious message. </p>
 <p><i>Click <b>Next</b> to proceed.</i></p>
