--- a/pagedata/feedbackdata/feedbackp14.htm
+++ b/pagedata/feedbackdata/feedbackp14.htm
@@ -1,2 +1,2 @@
-<p><span class="greenspan">Good job</span>, you have completed Step 11.</p>
+<p><span class="greenspan">Good job</span>. Change the subject line to reflect the content of the message.</p>
 <p><i>Click <b>Next</b> to proceed.</i></p>
