--- a/pagedata/p15.htm
+++ b/pagedata/p15.htm
@@ -16,6 +16,7 @@
                 <img class="activityimg" src="assets/images/m8-s11-p3-v3.jpg" />
                 <input type="text" id = "input-subj" class="input-subj EmbededElement" placeholder="Re: Scheduled Delivery">
                 <input type="text" id = "review-subj" class="review-subj EmbededElement" placeholder="Re: Scheduled Delivery" style='display:none;'>
+                <div class="textentryaccessibility-input-subj" style="opacity: 0;"></div>
             </div>
         </div>
     </div>
