--- a/pagedata/p3.htm
+++ b/pagedata/p3.htm
@@ -14,18 +14,13 @@
                 <div style="position:absolute;left: 188px;top: 162px;z-index: 5;width: 595px;height:380px;overflow:auto;">
                     <table id="OutlookMail" class="mail">
                             <tbody>
-                                <tr class="unread" id="row1" score="2" groupname="grp2" actionname="hotspot" tabindex="9" aria-label="
-                                    Christian Williams (williamsc@w.
-                                    Email format and concerns
-                                    Fri 04-29-2016 6:03
-                                    10 KB
-                                ">
-                                    <td width="12px" aria-hidden="true"></td>
-                                    <td width="5px" aria-hidden="true"></td>
-                                    <td width="205px" aria-hidden="true">Christian Williams (williamsc@w.</td>
-                                    <td width="195px" aria-hidden="true">Email format and concerns</td>
-                                    <td width="127px" aria-hidden="true">Fri 04-29-2016 6:03</td>
-                                    <td width="45px" aria-hidden="true">10 KB</td>
+                                <tr class="unread" id="row1" score="2" groupname="grp2" actionname="hotspot" tabindex="0" >
+                                    <td width="12px"></td>
+                                    <td width="5px"></td>
+                                    <td width="205px">Christian Williams (williamsc@w.</td>
+                                    <td width="195px">Email format and concerns</td>
+                                    <td width="127px">Fri 04-29-2016 6:03</td>
+                                    <td width="45px">10 KB</td>
                                 </tr>
                                 <tr class="read" id="row2">
                                     <td></td>
