--- a/pagedata/p5.htm
+++ b/pagedata/p5.htm
@@ -8,7 +8,7 @@
         </p>
         <p>Type the client’s email address, <b>pedersona@weaver.com</b>, in the appropriate location.</p>
         <p>Type your supervisor’s email address, <b>jordanc@western.com</b>, in the appropriate location.</p>
-        <p><i>Click <b>Send</b> to send the message.</i></p>
+        <p>Click Send to send the message.</p>
     </div>
 
 </div>
@@ -21,7 +21,8 @@
                 <input type="text" id= "input-cc-addr" class="input-cc-addr EmbededElement" placeholder="Enter Cc address">
                 <input type="text" id="review-to" class="review-to EmbededElement" placeholder="Enter To address" style='display:none;'>
                 <input type="text" id= "review-cc" class="review-cc EmbededElement" placeholder="Enter Cc address" style='display:none;'>
-
+                <div class="textentryaccessibility-to-addr" style="opacity: 0;"></div>
+                <div class="textentryaccessibility-cc-addr" style="opacity: 0;"></div>
                
              
             </div>
