--- a/pagedata/p8.htm
+++ b/pagedata/p8.htm
@@ -4,7 +4,7 @@
 <div class="intro-content">
     <div class="intro-p">
         <p>
-            For the next example, you have received an email message from a troubled client who has expressed his desire to communicate with you alone. You foresee problems with the client in the future and <b>want your supervisor to be kept abreast of the situation without the client knowing</b>. Your supervisor’s email address is <b>jordanc@western.com</b>. How would you respond to this message?
+            For the next example, you have received an email message from a troubled client who has expressed his desire to communicate with you alone. You foresee problems with the client in the future and <b>want your supervisor to be kept abreast of the situation without the client knowing</b>. Your supervisor’s email address is <b>jordanc@western.com</b>. How would you respond to this message? After typing the email address, click Send.
         </p>
     </div>
 </div>
@@ -17,6 +17,8 @@
                 <input type="text" id="input-cc-addr" class="input-cc-addr EmbededElement" placeholder="Enter Cc address">
                 <input type="text" id="input-bcc-addr" class="input-bcc-addr EmbededElement" placeholder="Enter Bcc address">
                 <input type="text" id="review-bcc" class="input-bcc-addr1 EmbededElement" placeholder="Enter Bcc address" style='display:none;'>
+                <div class="textentryaccessibility-cc-addr" style="opacity: 0;"></div>
+                <div class="textentryaccessibility-bcc-addr" style="opacity: 0;"></div>
             </div>
         </div>
     </div>
