--- a/pagedata/p9.htm
+++ b/pagedata/p9.htm
@@ -23,10 +23,13 @@
                 <input type="text" id="input-to-addr" class="input-to-addr EmbededElement" placeholder="Enter To address">
                 <input type="text" id="input-cc-addr" class="input-cc-addr EmbededElement" placeholder="Enter Cc address">
                 <input type="text" id="input-bcc-addr" class="input-bcc-addr EmbededElement" placeholder="Enter Bcc address">
-                <input type="text" id="review-to" class="review-to EmbededElement" placeholder="Enter Bcc address" style='display:none;'>
-                <input type="text" id="review-cc" class="review-cc EmbededElement" placeholder="Enter Bcc address" style='display:none;'>
-                <!-- <input type="text" id="review-bcc1" class="review-bcc EmbededElement" placeholder="Enter Bcc address" style='display:none;'> -->
-              <div id="review-bcc1" class="review-bcc EmbededElement" style="display:none;"></div>
+               <!-- <input type="text" id="review-to" class="review-to EmbededElement" placeholder="Enter Bcc address" style='display:none;'> -->
+                <!-- <input type="text" id="review-cc" class="review-cc EmbededElement" placeholder="Enter Bcc address" style='display:none;'> -->
+             <!-- <input type="text" id="review-bcc1" class="review-bcc EmbededElement" placeholder="Enter Bcc address" style='display:none;'> -->
+              <div id="review-bcc1" class="review-bcc1 EmbededElement" style="display:none;"></div>
+              <div class="textentryaccessibility-to-addr" style="opacity: 0;"></div>
+              <div class="textentryaccessibility-cc-addr" style="opacity: 0;"></div>
+              <div class="textentryaccessibility-bcc-addr" style="opacity: 0;"></div>
             </div>
         </div>
     </div>
