--- a/pagedata/p14.htm
+++ b/pagedata/p14.htm
@@ -15,8 +15,8 @@
         <div class="activity activitypage14">
             <div class="wrapperimage">
                 <img class="activityimg" src="assets/images/m8-s9-p1-v2-1-1.png" />
-                <div style="position:absolute;left: 187px;top: 162px;z-index: 5;width: 595px;height:380px;overflow:auto;">
-                    <table id="OutlookMail1" class="mail">
+                <div  style="position:absolute;left: 187px;top: 162px;z-index: 5;width: 595px;height:380px;overflow:auto;">
+                    <table id="OutlookMail1" class="mail" aria-hidden="true">
                           <tbody>
                               <tr class="read" id="row1">
                                   <td width="12px"></td>
