--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
                         </div>
 
                         <div class="hintDiv" style="width:120px;">
-                            <a href="#" class="hintdoc" style="position: none" aria-label="Hint Icon Click here for more information">
+                            <a href="#" class="hintdoc" style="position: unset" aria-label="Hint Icon Click here for more information">
                                 <svg disabled aria-labelledby="svghinttitle svghintdes" aria-hidden="true" role="image"
                                     style="vertical-align: text-bottom" height="26" width="29" enable-background="new 0 0 128 128"
                                     id="Layer_1" version="1.1" viewBox="0 0 128 128" width="128px" xml:space="preserve"
