--- a/index.htm
+++ b/index.htm
@@ -25,9 +25,8 @@
    
     <script src="scripts/Assessment.js"></script>
     <script src="scripts/AssessmentQuestion.js"></script>
-    <script src="scripts/cooker.js"></script>
-    <!--<script src="scripts/BML.js"></script>-->
-    
+   
+
 </head>
 
 <body>
@@ -35,6 +34,7 @@
         <header role="banner">
             <center>
                 <div class="header-content-dock" aria-hidden="true">
+                        <div class="presentationModeFooter" style="display:none">Presentation Mode</div>
                     <div class="intro-content" style="float:none;display: flex;                    justify-content: center;
                     margin-top: 11px;">
                         <div class="progressdiv" style="margin-left:none">
@@ -48,7 +48,7 @@
                             </div>
                         </div>
 
-                        <div class="hintDiv" style="width:120px;">
+                        <div class="hintDiv hintdivdock" style="width:120px;">
                             <a href="#" class="hintdoc" style="position: unset" aria-label="Hint Icon Click here for more information">
                                 <svg disabled aria-labelledby="svghinttitle svghintdes" aria-hidden="true" role="image"
                                     style="vertical-align: text-bottom" height="26" width="29" enable-background="new 0 0 128 128"
@@ -75,7 +75,8 @@
                                             class="hinticon" fill="#005976" />
                                     </g>
                                 </svg>
-                                <span class="hintlinkspan">Hint</span></a>
+                                <span class="hintlinkspan">
+                                    Hint</span></a>
                         </div>
                     </div>
                     <div class="hintcontainerdoc" style="display:none; float: left; width: 100%;">
@@ -93,6 +94,7 @@
                         <h1 id="titleheader" tabindex="-1">Communicating and Sharing on the Web</h1>
                     </div>
                     <div id="header-progress">
+                        <div class="presentationModeFooter" style="display:none" >Presentation Mode</div>
                         <div class="progress">
                             <div class="background">
                                 <!--<div class="pgBgItemFill"></div>-->
